--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2176,7 +2176,7 @@ input, select, textarea {
 
 
 	.wrapper {
-		background: #FDFEE0;
+		background: palegreen;
 		font: bold, italic;
 		margin: 0 0 2em 0;
 		padding: 6em 0 6em 0;
@@ -2707,7 +2707,7 @@ input, select, textarea {
 #footer1 {
 	position: relative;
 	overflow: hidden;
-	padding: 16px;
+	padding: 20px;
 	background-image: url("../../images/Captura\ de\ pantalla\ 2021-04-18\ 231001.png");
 	background-size: cover;
     background-position: center;
@@ -2718,7 +2718,8 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		padding: 2em 0 2em 0;
-		background: #2b252c;
+		background-image: url(../../images/footerbg.png);
+		background-position: center center;
 		color: #fff;
 	}
 
